switched to minified js

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ Remove this if you use the .htaccess -->
 	</div>
 	<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
 	<script src="http://rayhyde.nl/playground/js/playground.js" type="text/javascript"></script>
-	<script src="js/colcount.js" type="text/javascript"></script>
+	<script src="js/colcount.min.js" type="text/javascript"></script>
 	<script type="text/javascript">
 		var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 		document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
