--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 Remove this if you use the .htaccess -->
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>CSS Column counter</title>
-	<meta name="description" content="This handy calculator helps you quickly find the right column widths, in both pixels an precentages. Just arrow up or down, left or right, then copy the code!">
+	<meta name="description" content="This handy calculator helps you quickly find the right column widths, in both pixels and precentages. Just arrow up or down, left or right, then copy the code!">
 	<meta name="keywords" content="css, column, column width, column size, pixels, percentages, calculator">
 	<meta name="author" content="Ray Hyde | www.rayhyde.nl">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -33,6 +33,7 @@ Remove this if you use the .htaccess -->
 					<h2>Calculate columns quickly</h2>
 					<p>Just fill in the wrapper width and number of columns, then play with the gutter widths (arrow keys are quickest) and presto, you'll find the non-decimal column widths in pixels. </p>
 					<p>Just for the heck of it you can choose percentages. Not the greatest thing since sliced bread, but hey, I had fun making it!</p>
+					<p>Please drop in on my portfolio site <a href="http://www.rayhyde.nl">www.rayhyde.nl</a>!</p>
 				</div>
 			</section>
 			<section>
