--- a/README.html
+++ b/README.html
@@ -1,9 +1,7 @@
 <p><h1>Quickly calculate column widths</h1></p>
 <p>This handy calculator for developers helps you quickly find the right column widths, in both pixels an precentages. Just arrow up or down, left or right, then copy the code!</p>
 
-<p><strong>See it in action:</strong> <a href="http://rayhyde.github.io/calculate_columns
-/">http://rayhyde.github.io/calculate_columns
-/</a> </p>
+<p><strong>See it in action:</strong> <a href="http://rayhyde.github.io/calculate_columns/">http://rayhyde.github.io/calculate_columns/</a></p>
 
 <h2>My Playground</h2>
 
