--- a/index.html
+++ b/index.html
@@ -1,19 +1,11 @@
 <!DOCTYPE html>
-
-<!--[if lt IE 7 ]>				<html lang="nl" class="ie6">						<![endif]-->
-<!--[if IE 7 ]>						<html lang="nl" class="ie7">						<![endif]-->
-<!--[if IE 8 ]>						<html lang="nl" class="ie8">						<![endif]-->
-<!--[if IE 9 ]>						<html lang="nl" class="ie9">						<![endif]-->
-<!--[if lt IE 9]>					<script src="js/html5shiv.js"></script>	<![endif]-->
-<!--[if (gt IE 9)|!(IE)]>	<html lang="nl"> 												<![endif]-->
-
 <head>
 	<meta charset="utf-8">
-	<meta http-equiv="Content-Language" content="nl-NL" />
+	<meta http-equiv="Content-Language" content="en" />
 	<!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame
 Remove this if you use the .htaccess -->
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<title>CSS Column counter</title>
+	<title>CSS Column Calculator</title>
 	<meta name="description" content="This handy calculator helps you quickly find the right column widths, in both pixels and precentages. Just arrow up or down, left or right, then copy the code!">
 	<meta name="keywords" content="css, column, column width, column size, pixels, percentages, calculator">
 	<meta name="author" content="Ray Hyde | www.rayhyde.nl">
