--- a/index.html
+++ b/index.html
@@ -1,132 +1,132 @@
 <!DOCTYPE html>
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="Content-Language" content="en" />
-	<!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame
+    <meta charset="utf-8">
+    <meta http-equiv="Content-Language" content="en" />
+    <!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame
 Remove this if you use the .htaccess -->
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<title>CSS Column Calculator</title>
-	<meta name="description" content="This handy calculator helps you quickly find the right column widths, in both pixels and precentages. Just arrow up or down, left or right, then copy the code!">
-	<meta name="keywords" content="css, column, column width, column size, pixels, percentages, calculator">
-	<meta name="author" content="Ray Hyde | www.rayhyde.nl">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/colcount.css">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>CSS Column Calculator</title>
+    <meta name="description" content="This handy calculator helps you quickly find the right column widths, in both pixels and precentages. Just arrow up or down, left or right, then copy the code!">
+    <meta name="keywords" content="css, column, column width, column size, pixels, percentages, calculator">
+    <meta name="author" content="Ray Hyde | www.rayhyde.nl">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/colcount.css">
 </head>
 
 <body>
-	<div id="container">
-		<div id="wrap" class="setWidth">
-			<header class="setWidth">
-				<img src="img/colcount-headline.png" alt="Count your columns">
-			</header> 
-			<section>
-				<div id="explain">
-					<div class="bike"></div>
-					<h2>Calculate columns quickly</h2>
-					<p>Just fill in the wrapper width and number of columns, then play with the gutter widths (arrow keys are quickest) and presto, you'll find the non-decimal column widths in pixels. </p>
-					<p>Just for the heck of it you can choose percentages. Not the greatest thing since sliced bread, but hey, I had fun making it!</p>
-					<p>Please drop in on my portfolio site <a href="http://www.rayhyde.nl">www.rayhyde.nl</a>!</p>
-				</div>
-			</section>
-			<section>
-				<form>
-				<ul>
-					<li>
-						<label for="totalWidth">Wrapper width:</label>
-						<input type="text" value="960" id="totalWidth">px <span style="margin-left:20px">use ← or ↓, and → or ↑</span>
-					</li>
-					<li>
-						<label for="totalWidth">Columns in px or %:</label>
-						<input type="radio" name="percent" id="percent1" value="px" checked>
-						<label for="percent1">px</label>&nbsp;&nbsp;
-						<input type="radio" name="percent" id="percent2" value="%">
-						<label for="percent2">%</label>
-					</li>
-					<li>
-						<label for=""># of columns</label>
-						<input type="text" id="cols" value="4" />
-					</li>
-					<li>
-						<label for="">Gutter width:</label>
-						<input type="text" id="gutterWidth" value="28" /><span class="type"></span>
+    <div id="container">
+        <div id="wrap" class="setWidth">
+            <header class="setWidth">
+                <img src="img/colcount-headline.png" alt="Count your columns">
+            </header>
+            <section>
+                <div id="explain">
+                    <div class="bike"></div>
+                    <h2>Calculate columns quickly</h2>
+                    <p>Just fill in the wrapper width and number of columns, then play with the gutter widths (arrow keys are quickest) and presto, you'll find the non-decimal column widths in pixels. </p>
+                    <p>Just for the heck of it you can choose percentages. Not the greatest thing since sliced bread, but hey, I had fun making it!</p>
+                    <p>Please drop in on my portfolio site <a href="http://www.rayhyde.nl">www.rayhyde.nl</a>!</p>
+                </div>
+            </section>
+            <section>
+                <form>
+                <ul>
+                    <li>
+                        <label for="totalWidth">Wrapper width:</label>
+                        <input type="text" value="960" id="totalWidth">px <span style="margin-left:20px">use ← or ↓, and → or ↑</span>
+                    </li>
+                    <li>
+                        <label for="totalWidth">Columns in px or %:</label>
+                        <input type="radio" name="percent" id="percent1" value="px" checked>
+                        <label for="percent1">px</label>&nbsp;&nbsp;
+                        <input type="radio" name="percent" id="percent2" value="%">
+                        <label for="percent2">%</label>
+                    </li>
+                    <li>
+                        <label for=""># of columns</label>
+                        <input type="text" id="cols" value="4" />
+                    </li>
+                    <li>
+                        <label for="">Gutter width:</label>
+                        <input type="text" id="gutterWidth" value="28" /><span class="type"></span>
 
-					</li>
-				</ul>
-			</form>
-			</section>
-			<section class="wrap">
-				<h4 class="codeHeader"><img src="img/results.png"></h4>
-				<ul></ul>
-				<div class="message"></div>
-			</section>
-			<section>
-				<div class="codesWrap">
-					<ul class="codes header">
-						<li>
-							<h4 class="cssCode"><img src="img/css.png"></h4>
-						</li>
-						<li class="gutter"></li>
-						<li>
-							<h4 class="htmlCode"><img src="img/html.png"></h4>
-						</li>
-					</ul>
-					<ul class="codes">
-						<li id="code">
-							<pre></pre>
-						</li>
-						<li class="gutter"></li>
-						<li id="code2">
-							<pre></pre>
-						</li>
-					</ul>
-				</div>
-			</section>
-		</div>
-		<div id="footerWrap">
-			<footer class="setWidth">
-				<div class="mainImg">
-					<div class="credits">
-					"Vintage Tourists Traveling in Paris" by YesterdayCafe.
-					<br><br>
-					Shamelessly ripped from zazzle.com
-				</div>
-				<img src="img/couple3.png">
-				</div>
-				<div id="bottomTab" class="think">
-				<div class="icon">
-					<div class="icon1"></div>
-					<div class="icon2"></div>
-				</div>
-				<a class="close" title="Dit venster sluiten">Hide this window</a>
-				<div class="content">
-					<h2>Wat strange site is this?</h2>
-					<p>I am a frontend web designer/developer with over 14 years experience in designing and building websites, in HTML/CSS, Wordpress, Magento and other webshop and CMS systems. My roots lie in marketing communication and sales. This allows me to perfectly tie in my work to the target audience’s perceptions and the goals of the principal.</p>
-					<p>As a developer I have the technical skills, such as HTML5, CSS3, Javascript (jQuery), LESS, responsive design, Magento and Wordpress. Also I am a designer with a good sense of shape and balance, with clarity of the message at the forefront of everything I make. Although I am not a programmer I can find my way around many programming languages, such as PHP and ASP, for e.g. template adaptation, ...</p>
-					<h3>Yes, yes, yes, but why this page then?</h3>
-					<p class="indent">I like puzzles and scripting to me is like solving a puzzle with the added bonus of ending up with something that actually does something - useful or not. I call it the Meccano-effect: just building something for the fun of it and watching it work. And that's what you can find me doing of a rainy Sunday morning.</p>
-					<p class="indent">
-						<a href="http://www.rayhyde.nl">
-							<img align="right" src="http://rayhyde.nl/playground/img/sigfile.png" width="186" height="101" alt="Ray Hyde, web designer en developer" title="Ray Hyde, web designer en developer"></a>
-							So, if you got to this page through the backdoor: why not have a peek at my portfolio site <a href="http://www.rayhyde.nl">www.rayhyde.nl</a>?
-						</p>
-				</div>
-			</div>
-			</footer>
-		</div>
-	</div>
-	<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
-	<script src="http://rayhyde.nl/playground/js/playground.js" type="text/javascript"></script>
-	<script src="js/colcount.min.js" type="text/javascript"></script>
-	<script type="text/javascript">
-		var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-		document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-	</script>
-	<script type="text/javascript">
-		try {
-		var pageTracker = _gat._getTracker("UA-12332810-1");
-		pageTracker._trackPageview();
-		} catch(err) {}
-	</script>
+                    </li>
+                </ul>
+            </form>
+            </section>
+            <section class="wrap">
+                <h4 class="codeHeader"><img src="img/results.png"></h4>
+                <ul></ul>
+                <div class="message"></div>
+            </section>
+            <section>
+                <div class="codesWrap">
+                    <ul class="codes header">
+                        <li>
+                            <h4 class="cssCode"><img src="img/css.png"></h4>
+                        </li>
+                        <li class="gutter"></li>
+                        <li>
+                            <h4 class="htmlCode"><img src="img/html.png"></h4>
+                        </li>
+                    </ul>
+                    <ul class="codes">
+                        <li id="code">
+                            <pre></pre>
+                        </li>
+                        <li class="gutter"></li>
+                        <li id="code2">
+                            <pre></pre>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+        </div>
+        <div id="footerWrap">
+            <footer class="setWidth">
+                <div class="mainImg">
+                    <div class="credits">
+                    "Vintage Tourists Traveling in Paris" by YesterdayCafe.
+                    <br><br>
+                    Shamelessly ripped from zazzle.com
+                </div>
+                <img src="img/couple3.png">
+                </div>
+                <div id="bottomTab" class="think">
+                <div class="icon">
+                    <div class="icon1"></div>
+                    <div class="icon2"></div>
+                </div>
+                <a class="close" title="Dit venster sluiten">Hide this window</a>
+                <div class="content">
+                    <h2>Wat strange site is this?</h2>
+                    <p>I am a frontend web designer/developer with over 14 years experience in designing and building websites, in HTML/CSS, Wordpress, Magento and other webshop and CMS systems. My roots lie in marketing communication and sales. This allows me to perfectly tie in my work to the target audience’s perceptions and the goals of the principal.</p>
+                    <p>As a developer I have the technical skills, such as HTML5, CSS3, Javascript (jQuery), LESS, responsive design, Magento and Wordpress. Also I am a designer with a good sense of shape and balance, with clarity of the message at the forefront of everything I make. Although I am not a programmer I can find my way around many programming languages, such as PHP and ASP, for e.g. template adaptation, ...</p>
+                    <h3>Yes, yes, yes, but why this page then?</h3>
+                    <p class="indent">I like puzzles and scripting to me is like solving a puzzle with the added bonus of ending up with something that actually does something - useful or not. I call it the Meccano-effect: just building something for the fun of it and watching it work. And that's what you can find me doing of a rainy Sunday morning.</p>
+                    <p class="indent">
+                        <a href="http://www.rayhyde.nl">
+                            <img align="right" src="http://rayhyde.nl/playground/img/sigfile.png" width="186" height="101" alt="Ray Hyde, web designer en developer" title="Ray Hyde, web designer en developer"></a>
+                            So, if you got to this page through the backdoor: why not have a peek at my portfolio site <a href="http://www.rayhyde.nl">www.rayhyde.nl</a>?
+                        </p>
+                </div>
+            </div>
+            </footer>
+        </div>
+    </div>
+    <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+    <script src="http://rayhyde.nl/playground/js/playground.js" type="text/javascript"></script>
+    <script src="js/colcount.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+        document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+    </script>
+    <script type="text/javascript">
+        try {
+        var pageTracker = _gat._getTracker("UA-12332810-1");
+        pageTracker._trackPageview();
+        } catch(err) {}
+    </script>
 </body>
 
 </html>
